@@ -2,6 +2,7 @@
 Akeeba Panopticon 1.0.6
 ================================================================================
 ~ Translations now use PO files instead of a third party service
+# [HIGH] Wrong assignment of sites to groups if there are gaps in numbering [gh-360]
 
 Akeeba Panopticon 1.0.5
 ================================================================================
